unpackaged/main/default/objects/Opportunity/fields/LegalPick__c.field-meta.xml
<CustomField>
    <fullName>LegalPick__c</fullName>
    <description>NDA, CLOSA, MCLOSA, Amendment etc. in place</description>
    <inlineHelpText>DS PROCESS ALIGNMENT/APPROVALS: NDA, CLOSA, MCLOSA, Amendment etc. in place</inlineHelpText>
    <label>Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>