unpackaged/main/default/objects/Opportunity/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <label>List</label>
    <summarizedField>OpportunityLineItem.Total_List_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>