unpackaged/main/default/objects/Opportunity/fields/Lost_Value__c.field-meta.xml
<CustomField>
    <fullName>Lost_Value__c</fullName>
    <formula>IF(
AND(IsWon = FALSE, IsClosed = TRUE), Amount * -1, 
Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value without Lost Opp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>