unpackaged/main/default/objects/Opportunity/fields/LostDisengagedComments__c.field-meta.xml
<CustomField>
    <fullName>LostDisengagedComments__c</fullName>
    <description>Additional comments to explain why the opportunity was lost/disengaged.</description>
    <inlineHelpText>Additional comments to explain why the opportunity was lost/disengaged.</inlineHelpText>
    <label>Lost/Disengaged Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>