unpackaged/main/default/objects/Opportunity/fields/MaintenanceMargin__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceMargin__c</fullName>
    <label>Maintenance Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>equals</operation>
        <value>Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>