unpackaged/main/default/objects/Opportunity/fields/Majenta_Discount__c.field-meta.xml
<CustomField>
    <fullName>Majenta_Discount__c</fullName>
    <formula>( List__c - Amount ) / List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Majenta Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>