unpackaged/main/default/objects/Opportunity/fields/Margin_Calc__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calc__c</fullName>
    <label>Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>