unpackaged/main/default/objects/Opportunity/fields/Margin_to_Majenta__c.field-meta.xml
<CustomField>
    <fullName>Margin_to_Majenta__c</fullName>
    <formula>Margin_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin to Majenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>