unpackaged/main/default/objects/Opportunity/fields/Marketing_Content_Completed__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Content_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing have created, published and promoted content.</description>
    <inlineHelpText>Marketing have created, published and promoted content.</inlineHelpText>
    <label>Marketing Content Completed</label>
    <type>Checkbox</type>
</CustomField>