unpackaged/main/default/objects/Opportunity/fields/Marketing_Content_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Content_Completed_Date__c</fullName>
    <description>Date marketing content completed</description>
    <inlineHelpText>Date marketing content completed</inlineHelpText>
    <label>Marketing Content Completed Date</label>
    <type>Date</type>
</CustomField>