unpackaged/main/default/objects/Opportunity/fields/Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments__c</fullName>
    <formula>Net_Cost_of_Financing__c / 36</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>