unpackaged/main/default/objects/Opportunity/fields/Monthly_Payments_inc_additional_product__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments_inc_additional_product__c</fullName>
    <formula>Monthly_Payments__c + 203.80</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payments inc additional product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>