unpackaged/main/default/objects/Opportunity/fields/MXQuota__c.field-meta.xml
<CustomField>
    <fullName>MXQuota__c</fullName>
    <description>Used to log MX+ Transaction quota sold.</description>
    <inlineHelpText>MX+ Transaction quote sold.</inlineHelpText>
    <label>MX+ Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>