unpackaged/main/default/objects/Opportunity/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>