unpackaged/main/default/objects/Opportunity/fields/Net_Cost_of_Financing__c.field-meta.xml
<CustomField>
    <fullName>Net_Cost_of_Financing__c</fullName>
    <formula>Amount + ( Amount * 0.088)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Cost of Financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>