unpackaged/main/default/objects/Opportunity/fields/NextInvoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextInvoiceDueDate__c</fullName>
    <label>Next Invoice Due Date</label>
    <type>Date</type>
</CustomField>