unpackaged/main/default/objects/Opportunity/fields/No_of_2_year_Autodesk_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_2_year_Autodesk_Products__c</fullName>
    <label>No. of 2-year Autodesk Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Description</field>
        <operation>contains</operation>
        <value>Autodesk</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Description</field>
        <operation>contains</operation>
        <value>2-Year</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Description</field>
        <operation>notContain</operation>
        <value>Majenta Subscription</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>