unpackaged/main/default/objects/Opportunity/fields/No_of_Annual_Autodesk_Products_w_SUBS__c.field-meta.xml
<CustomField>
    <fullName>No_of_Annual_Autodesk_Products_w_SUBS__c</fullName>
    <label>No. of Autodesk Products w/SUBS</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Description</field>
        <operation>contains</operation>
        <value>Majenta Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>