unpackaged/main/default/objects/Opportunity/fields/No_of_Passport_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Passport_Products__c</fullName>
    <label>No. of Passport Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Description</field>
        <operation>contains</operation>
        <value>Services Passport</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>