unpackaged/main/default/objects/Opportunity/fields/No_Of_SItes__c.field-meta.xml
<CustomField>
    <fullName>No_Of_SItes__c</fullName>
    <label>No Of SItes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>