unpackaged/main/default/objects/Opportunity/fields/Number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sites__c</fullName>
    <description>This field shows the number of sites the supplier requested to subscribe for</description>
    <label>Number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>