unpackaged/main/default/objects/Opportunity/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <description>OEM for which this opportunity is for</description>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OEM</valueSetName>
    </valueSet>
</CustomField>