unpackaged/main/default/objects/Opportunity/fields/Online_Sale__c.field-meta.xml
<CustomField>
    <fullName>Online_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Sale</label>
    <type>Checkbox</type>
</CustomField>