unpackaged/main/default/objects/Opportunity/fields/Opportunity_Ambition__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ambition__c</fullName>
    <description>Best care opportunity value</description>
    <label>Opportunity Ambition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>