unpackaged/main/default/objects/Opportunity/fields/Opportunity_CoO_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CoO_Number__c</fullName>
    <formula>Account.Name &amp; " - " &amp;  Quote_Number_Revised__c</formula>
    <label>Opportunity CoO Number</label>
    <type>Text</type>
</CustomField>