unpackaged/main/default/objects/Opportunity/fields/Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Detail__c</fullName>
    <description>Detail information about the company, departments and people who form part of the opportunity solution.</description>
    <inlineHelpText>Detail information about the company, departments and people who form part of the opportunity solution.</inlineHelpText>
    <label>Opportunity Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>