unpackaged/main/default/objects/Opportunity/fields/Opportunity_Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast_Type__c</fullName>
    <label>Opportunity Forecast Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>