unpackaged/main/default/objects/Opportunity/fields/OpportunityAge__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAge__c</fullName>
    <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long the opportunity has been open in days.</inlineHelpText>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>