unpackaged/main/default/objects/Opportunity/fields/OpportunityAssistedByRef__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAssistedByRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to identify user who has assisted the owner for the opportunity.</description>
    <inlineHelpText>User who has assisted the owner with this opportunity.</inlineHelpText>
    <label>Opportunity Assisted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>