unpackaged/main/default/objects/Opportunity/fields/Order_Licence_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Licence_Issue_Date__c</fullName>
    <label>Licence Issued by Supplier (c)</label>
    <type>Date</type>
</CustomField>