unpackaged/main/default/objects/Opportunity/fields/Order_Licence_Issue_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Order_Licence_Issue_Time_Days__c</fullName>
    <formula>Order_Licence_Issue_Date__c  - Order_to_Supplier_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licence Issue Time (Days) (a to c)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>