unpackaged/main/default/objects/Opportunity/fields/Order_Processed_Supplier_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Processed_Supplier_Date__c</fullName>
    <label>Order Accepted/Rejected by Supplier (b)</label>
    <type>Date</type>
</CustomField>