unpackaged/main/default/objects/Opportunity/fields/Order_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Time__c</fullName>
    <formula>IF( ISNULL( Order_Processed_Supplier_Date__c ), 
TODAY() - Order_to_Supplier_Date__c,
Order_Processed_Supplier_Date__c -  Order_to_Supplier_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Processing Time (Days) (a to b)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>