unpackaged/main/default/objects/Opportunity/fields/Order_to_Supplier_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_to_Supplier_Date__c</fullName>
    <label>Order Placed with Supplier (a)</label>
    <type>Date</type>
</CustomField>