unpackaged/main/default/objects/Opportunity/fields/OtherMargin__c.field-meta.xml
<CustomField>
    <fullName>OtherMargin__c</fullName>
    <label>Other Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>notEqual</operation>
        <value>Software,Hardware,Services,Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>