unpackaged/main/default/objects/Opportunity/fields/OtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenue__c</fullName>
    <label>Other Revenue</label>
    <summarizedField>OpportunityLineItem.Total_Sale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>notEqual</operation>
        <value>Software,Hardware,Services,Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>