unpackaged/main/default/objects/Opportunity/fields/Overview_of_Solution__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_Solution__c</fullName>
    <description>Give a brief overview of the solution detailed in the opportunity. Outline products, services and any training provided.</description>
    <inlineHelpText>Give a brief overview of the solution detailed in the opportunity. Outline products, services and any training provided.</inlineHelpText>
    <label>Overview of Solution</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>