unpackaged/main/default/objects/Opportunity/fields/OwnerDepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerDepartmentCode__c</fullName>
    <formula>CASE(Company__c, 
  'SOLUTIONS', Owner.SageCodeSOL__c, 
  'PLM', Owner.SageCodePLM__c,
'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Department Code</label>
    <type>Text</type>
</CustomField>