unpackaged/main/default/objects/Opportunity/fields/P2O__c.field-meta.xml
<CustomField>
    <fullName>P2O__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2O</label>
    <type>Checkbox</type>
</CustomField>