unpackaged/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3DSystems</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>aPriori</fullName>
            </value>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Icona</fullName>
            </value>
            <value>
                <fullName>i GET IT</fullName>
            </value>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>IMSCAD</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>NETGEAR</fullName>
            </value>
            <value>
                <fullName>Platform Consultancy</fullName>
            </value>
            <value>
                <fullName>QNAP</fullName>
            </value>
            <value>
                <fullName>SensAble</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>Thecus</fullName>
            </value>
            <value>
                <fullName>V3P</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>