unpackaged/main/default/objects/Opportunity/fields/Passport_Credits_Available__c.field-meta.xml
<CustomField>
    <fullName>Passport_Credits_Available__c</fullName>
    <formula>Passport_Credits_Purchased__c -  Passport_Credits_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>