unpackaged/main/default/objects/Opportunity/fields/Passport_Credits_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Passport_Credits_Purchased__c</fullName>
    <label>Credits Purchased</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>