unpackaged/main/default/objects/Opportunity/fields/Passport_Credits_Used__c.field-meta.xml
<CustomField>
    <fullName>Passport_Credits_Used__c</fullName>
    <label>Credits Used</label>
    <summarizedField>Passport_Credits__c.Credits_Used__c</summarizedField>
    <summaryForeignKey>Passport_Credits__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>