unpackaged/main/default/objects/Opportunity/fields/Passport_Products__c.field-meta.xml
<CustomField>
    <fullName>Passport_Products__c</fullName>
    <formula>No_of_Passport_Products__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Products</label>
    <type>Checkbox</type>
</CustomField>