unpackaged/main/default/objects/Opportunity/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>