unpackaged/main/default/objects/Opportunity/fields/PlatformCentricVisionPick__c.field-meta.xml
<CustomField>
    <fullName>PlatformCentricVisionPick__c</fullName>
    <description>TECHNICAL ALIGNMENT: Alignment on project scope &amp; process challenges that require a business platform approach</description>
    <inlineHelpText>Alignment on project scope &amp; process challenges that require a business platform approach</inlineHelpText>
    <label>Platform-Centric Vision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>