unpackaged/main/default/objects/Opportunity/fields/PLM_LEAD__c.field-meta.xml
<CustomField>
    <fullName>PLM_LEAD__c</fullName>
    <label>CUTTING EDGE LEAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUTTING EDGE LEAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>