unpackaged/main/default/objects/Opportunity/fields/PLM_Products__c.field-meta.xml
<CustomField>
    <fullName>PLM_Products__c</fullName>
    <label>PLM Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Siemens - Ideas NX</fullName>
            </value>
            <value>
                <fullName>Siemens - UG NX</fullName>
            </value>
            <value>
                <fullName>Siemens - TC Express</fullName>
            </value>
            <value>
                <fullName>Siemens - TC Vis</fullName>
            </value>
            <value>
                <fullName>Siemens - Tecnomatix</fullName>
            </value>
            <value>
                <fullName>Siemens - SolidEdge</fullName>
            </value>
            <value>
                <fullName>Siemens - Femap</fullName>
            </value>
            <value>
                <fullName>Siemens - NX Cam Express</fullName>
            </value>
            <value>
                <fullName>Siemens - Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>