unpackaged/main/default/objects/Opportunity/fields/Posted_to_Sage__c.field-meta.xml
<CustomField>
    <fullName>Posted_to_Sage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted to Sage (Legacy)</label>
    <type>Checkbox</type>
</CustomField>