unpackaged/main/default/objects/Opportunity/fields/PreviousContractIdRef__c.field-meta.xml
<CustomField>
    <fullName>PreviousContractIdRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>