unpackaged/main/default/objects/Opportunity/fields/PricebookExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PricebookExpiryDate__c</fullName>
    <formula>Pricebook2.VaildToDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Expiry Date</label>
    <type>Date</type>
</CustomField>