unpackaged/main/default/objects/Opportunity/fields/PricebookValid__c.field-meta.xml
<CustomField>
    <fullName>PricebookValid__c</fullName>
    <formula>IF(ISBLANK(PricebookExpiryDate__c),
  TRUE,
  IF(CloseDate&gt;TODAY(),
    (PricebookExpiryDate__c&gt;TODAY()),
    (PricebookExpiryDate__c&gt;CloseDate)
  )
)</formula>
    <label>Pricebook Valid</label>
    <type>Checkbox</type>
</CustomField>