unpackaged/main/default/objects/Opportunity/fields/PricingPick__c.field-meta.xml
<CustomField>
    <fullName>PricingPick__c</fullName>
    <description>SBO + CES + Rev Rec</description>
    <inlineHelpText>DS PROCESS ALIGNMENT/APPROVALS: SBO + CES + Rev Rec</inlineHelpText>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>